fix avoid overflow

--- a/src/PageLayout.css
+++ b/src/PageLayout.css
@@ -9,7 +9,9 @@
 #page-layout > #navigation-wrapper,
 #page-layout > #page-wrapper {
   flex-grow: 1;
-  /* Avoid overflowing, see https://stackoverflow.com/questions/36230944/prevent-flex-items-from-overflowing-a-container/66689926#66689926 */
+}
+/* Avoid overflow, see https://stackoverflow.com/questions/36230944/prevent-flex-items-from-overflowing-a-container/66689926#66689926 */
+#page-layout > #page-wrapper {
   min-width: 0;
 }
 
